# assaultfish

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  format.sh  wizard.sh
client/: CMakeLists.txt  gl.c  gl_font.c  gl_main.c  gl_shader.c  gl_util.c  main.c  net.c  ui.c
data/: README.txt  manifest.xml
data/mdl/: crate.gsm  fish.gsm  maxwell.mdl  tetopear.gsm  tetopear.mdl
data/sfx/: manifest.xml
engine/: CMakeLists.txt  README.txt
engine/common/: log.c
engine/data/: README.txt  manifest.xml
engine/data/shader/: shadow.fs  shadow.vs
engine/include/GearBox/: Client.h  Core.h  Endian.h  File.h  Foundation.h  GL.h  Log.h  MachDep.h  Math.h  Resource.h  Server.h  SkyBox.h  String.h  TypeDefs.h  Version.h
engine/include/GearSrc/: CRC.h  Client.h  Core.h  Endian.h  File.h  Foundation.h  GL.h  Log.h  MachDep.h  Math.h  Model.h  Net.h  Physics.h  Resource.h  Server.h  SkyBox.h  Sound.h  SoundDriver.h  SoundEngine.h  String.h  TypeDefs.h  Version.h  XML.h
engine/include/GearSrc/GL/: GL.h
engine/lz4/: lz4.h  lz4frame.c
engine/net/: CMakeLists.txt  Makefile  testclient.c  testserver.c
engine/net/include/: fishsoup.h  gbnet.h
engine/net/src/: client.c  server.c  socket.c
engine/ode/: CMakeLists.txt  config.h.in
engine/resource/: shadow.fs
engine/resource/logo/: logo.pov
engine/resource/shader/: shadow.fs  shadow.vs
engine/src/: client.c  core.c  crc.c  endian.c  file.c  getline.c  gl.c  gl_camera.c  gl_common.c  gl_cull.c  gl_shader.c  gl_shadow.c  gl_texture.c  gload.c  log.c  math.c  model.c  physics.c  resource.c  server.c  skybox.c  snd_mod.c  snd_xm.c  sound.c  soundengine.c  string.c  version.c  xml.c
engine/src/gl/: gl.c  gl_camera.c  gl_common.c  gl_shader.c  gl_shadow.c  gl_texture.c
engine/src/net/: net_base.c  net_client.c  net_packet.c  net_server.c  net_state.c
engine/src/sound/: snd_flac.c  snd_mod.c  snd_mp3.c  snd_vorbis.c  snd_wav.c  snd_xm.c  sound.c  sounddriver.c  soundengine.c
engine/tools/: CMakeLists.txt  logo.sh
engine/tools/gb_makepak/: main.c
engine/tools/gs_dumpfont/: main.c
engine/tools/gs_makepak/: main.c
include/: af_client.h  af_common.h  af_config.h.in  af_server.h
resource/: shadow.fs  shadow.vs
resource/model/crate/: model.mtl
resource/model/fish/: model.mtl
resource/model/tetopear/: model.mtl
server/: main.c  net.c
src/: log.c  version.c
tools/: af_dumpfont.c
